# ragtranscript

./: .env-example  README.md  pyproject.toml
db/: chroma.sqlite3
db/689ea620-9cc4-46b5-a27e-9cb0e039ae08/: index_metadata.pickle
src/ragtranscript/: datafetch.py  llm.py  main.py
